<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteY="85dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/expression_picker_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:clickable="false"
            android:focusable="false"
            android:gravity="end"
            android:inputType="textPersonName"
            android:scrollHorizontally="true"
            android:singleLine="false"
            android:maxLines="@integer/material_motion_duration_long_2"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_marginEnd="12dp"
            android:clickable="false"
            android:focusable="false"
            android:gravity="end"
            android:inputType="textPersonName"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/__0"
            android:textColor="@color/light_gray"
            android:textSize="48sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteY="336dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/regularButton"
                android:backgroundTint="@color/red"
                android:text="@string/c"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_opposite"
                style="@style/operatorButton"
                android:layout_gravity="fill"
                android:text="@string/_opposite"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_module"
                style="@style/operatorButton"
                android:text="@string/_module" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divine"
                style="@style/operatorButton"
                android:text="@string/_divine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitButton"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitButton"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitButton"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/operatorButton"
                android:text="@string/_multiply" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitButton"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitButton"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitButton"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/operatorButton"
                android:text="@string/_substract" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitButton"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitButton"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitButton"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/operatorButton"
                android:text="@string/_add" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitButton"
                android:text="@string/_zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/digitButton"
                android:text="@string/_dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_result"
                style="@style/resultButton"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:backgroundTint="@color/green"
                android:text="@string/_equal" />
        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>